--- a/src/css/components/slider/slider.css
+++ b/src/css/components/slider/slider.css
@@ -29,11 +29,13 @@
 .Slider-image {
     display: block;
     height: auto;
+    height: 100%;
     width: 100%;
 }
 
 /* postcss-bem-linter: ignore */
 .Slider-image > img {
+    height: 100%;
     object-fit: cover;
     width: 100%;
 }
